# SnakeExample

./: CMakeLists.txt  README.md  Snake.cpp  Snake.h  main.cpp
SFML_COMPILER/compiler610/mingw64/: build-info.txt
SFML_COMPILER/compiler610/mingw64/lib/gcc/x86_64-w64-mingw32/6.1.0/: libstdc++.dll.a-gdb.py
SFML_COMPILER/compiler610/mingw64/opt/include/openssl/: opensslconf.h
SFML_COMPILER/compiler610/mingw64/opt/lib/: tclConfig.sh
SFML_COMPILER/compiler610/mingw64/opt/lib/itcl4.0.3/: itclConfig.sh
SFML_COMPILER/compiler610/mingw64/opt/lib/python2.7/: _sysconfigdata.py
SFML_COMPILER/compiler610/mingw64/opt/lib/python2.7/config/: Makefile
SFML_COMPILER/compiler610/mingw64/opt/lib/python2.7/lib-dynload/: _bisect.pyd  _codecs_cn.pyd  _codecs_hk.pyd  _codecs_iso2022.pyd  _codecs_jp.pyd  _codecs_kr.pyd  _codecs_tw.pyd  _collections.pyd  _csv.pyd  _ctypes.pyd  _ctypes_test.pyd  _curses.pyd  _curses_panel.pyd  _elementtree.pyd  _hashlib.pyd  _heapq.pyd  _hotshot.pyd  _io.pyd  _json.pyd  _lsprof.pyd  _msi.pyd  _multibytecodec.pyd  _multiprocessing.pyd  _random.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  _struct.pyd  _subprocess.pyd  _testcapi.pyd  _tkinter.pyd  array.pyd  audioop.pyd  binascii.pyd  bz2.pyd  cPickle.pyd  cStringIO.pyd  (+17 more)
SFML_COMPILER/compiler610/mingw64/opt/lib/tdbc1.0.3/: tdbcConfig.sh
SFML_COMPILER/compiler610/mingw64/opt/lib/tk8.6/: tkConfig.sh
SFML_COMPILER/compiler610/mingw64/x86_64-w64-mingw32/lib/ldscripts/: i386pe.x  i386pe.xa  i386pe.xbn  i386pe.xn  i386pe.xr  i386pe.xu  i386pep.x  i386pep.xa  i386pep.xbn  i386pep.xn  i386pep.xr  i386pep.xu
(+160 files in other folders)
